SUBDIRS = liblinx linxcfg linxstat linxdisc linxgw/libgw linxgw/linxgws linxgw/linxgwcmd bmark/linx_bmark example/linx_basic

dist-hook:

EXTRA_DIST = \
./autogen.sh \
./drivers/net/linxtracedrv.c \
./drivers/net/Makefile \
./flags.am \
./linxdisc/linxdisc.conf.example \
./linxgw/ChangeLog \
./linxgw/docs/linxgws.txt \
./linxgw/include/ose_gw.h \
./linxgw/include/ose_gwp.h \
./linxgw/linxgws/example.conf \
./net/linx/af_linx.c \
./net/linx/linx_pool.c \
./net/linx/include/linx_pool.h \
./net/linx/cfg/db.c \
./net/linx/cfg/db_format.c \
./net/linx/cfg/db_format.h \
./net/linx/cfg/db.h \
./net/linx/cfg/db_ioctl.c \
./net/linx/cfg/db_private.h \
./net/linx/cfg/db_proc.c \
./net/linx/cfg/db_proc.h \
./net/linx/cmcl/cmcl.c \
./net/linx/cmcl/cmcl.txt \
./net/linx/cmcl/Makefile \
./net/linx/common.mk \
./net/linx/config.mk \
./net/linx/ecm/docs/ecm.txt \
./net/linx/ecm/ecm_conn.c \
./net/linx/ecm/ecm.h \
./net/linx/ecm/ecm_debug.c \
./net/linx/ecm/ecm_debug.h \
./net/linx/ecm/ecm_kutils.c \
./net/linx/ecm/ecm_kutils.h \
./net/linx/ecm/ecm_lock.h \
./net/linx/ecm/ecm_proto.h \
./net/linx/ecm/ecm_rx.c \
./net/linx/ecm/ecm_tx.c \
./net/linx/ecm/Makefile \
./net/linx/include/af_linx.h \
./net/linx/include/buf_types.h \
./net/linx/include/cfg.h \
./net/linx/include/ipc.h \
./net/linx/include/linx_assert.h \
./net/linx/include/linx_compat32.h \
./net/linx/include/linx_compat.h \
./net/linx/include/linx_ioctl_info.h \
./net/linx/include/linx_mem.h \
./net/linx/include/linx_message_trace.h \
./net/linx/include/linx_trace.h \
./net/linx/include/rlnh.h \
./net/linx/ipc/attach_detach.c \
./net/linx/ipc/attach_detach.h \
./net/linx/ipc/hunt.c \
./net/linx/ipc/hunt.h \
./net/linx/ipc/mem.c \
./net/linx/ipc/new_link.c \
./net/linx/ipc/new_link.h \
./net/linx/ipc/rlnh.c \
./net/linx/ipc/rlnh.h \
./net/linx/ipc/stat.c \
./net/linx/ipc/stat.h \
./net/linx/ipc/tmo.c \
./net/linx/ipc/tmo.h \
./net/linx/linx_ioctl_info.c \
./net/linx/linx_message_trace.c \
./net/linx/linx_module.c \
./net/linx/Makefile \
./net/linx/riocm/Makefile \
./net/linx/riocm/riocm.txt \
./net/linx/riocm/rio_conn.c \
./net/linx/riocm/rio.h \
./net/linx/riocm/rio_kutils.c \
./net/linx/riocm/rio_kutils.h \
./net/linx/riocm/rio_lock.h \
./net/linx/riocm/rio_proto.h \
./net/linx/riocm/rio_rx.c \
./net/linx/riocm/rio_tx.c \
./net/linx/rlnh/rlnh_link.h \
./net/linx/rlnh/rlnh_linux.c \
./net/linx/rlnh/rlnh_proto.h \
./net/linx/rlnh/rlnh_queue.c \
./net/linx/rlnh/rlnh_queue.h \
./net/linx/shmcm/Makefile \
./net/linx/shmcm/shmcm.c \
./net/linx/shmcm/shmcm.h \
./net/linx/shmcm/shmcm_kutils.c \
./net/linx/shmcm/shmcm_kutils.h \
./net/linx/shmcm/shmcm_lock.h \
./net/linx/shmcm/shmcm_proto.h \
./net/linx/shmcm/shmcm_rx.c \
./net/linx/shmcm/shmcm_tx.c \
./net/linx/shmcm/shmcm.txt \
./net/linx/tcp_cm/Makefile \
./net/linx/tcp_cm/tcp_cm.c \
./net/linx/trace/trace.c \
./patch/automake/octeon-001.patch \
./patch/libpcap/INSTALL \
./patch/libpcap/libpcap-1.0.0-linxtrace-001.patch \
./patch/libpcap/libpcap-1.3.0-linxtrace-001.patch \
./patch/linx/skb-realloc-headroom.patch \
./patch/tcpdump/INSTALL \
./patch/tcpdump/tcpdump-4.0.0-linxtrace-001.patch \
./patch/tcpdump/tcpdump-4.3.0-linxtrace-001.patch \
./patch/wireshark/README \
./patch/wireshark/wireshark-1.0.6-linxdisc-dissector-001.patch \
./patch/wireshark/wireshark-1.0.6-linx-internal-dissector-002.patch \
./bmark/linx_bmark/README

if DOC
EXTRA_DIST += \
./doc/book-linx-protocols.pdf \
./doc/html/linx.7.html \
./doc/html/linx_alloc.3.html \
./doc/html/linx_attach.3.html \
./doc/html/linx_cancel_new_link.3.html \
./doc/html/linx_cancel_tmo.3.html \
./doc/html/linxcfg.1.html \
./doc/html/linx_close.3.html \
./doc/html/linx_detach.3.html \
./doc/html/linxdisc.8.html \
./doc/html/linxdisc.conf.5.html \
./doc/html/linx_free_buf.3.html \
./doc/html/linx_free_name.3.html \
./doc/html/linx_free_stat.3.html \
./doc/html/linx_get_descriptor.3.html \
./doc/html/linx_get_name.3.html \
./doc/html/linx_get_owner.3.html \
./doc/html/linx_get_spid.3.html \
./doc/html/linx_get_stat.3.html \
./doc/html/linx_get_version.3.html \
./doc/html/linxgwcmd.1.html \
./doc/html/linxgws.8.html \
./doc/html/linxgws.conf.5.html \
./doc/html/linx.h.3.html \
./doc/html/linx_hunt.3.html \
./doc/html/linx_hunt_from.3.html \
./doc/html/linx_modify_tmo.3.html \
./doc/html/linx_open.3.html \
./doc/html/linx_receive.3.html \
./doc/html/linx_receive_from.3.html \
./doc/html/linx_receive_w_tmo.3.html \
./doc/html/linx_request_new_link.3.html \
./doc/html/linx_request_tmo.3.html \
./doc/html/linx_s_alloc.3.html \
./doc/html/linx_send.3.html \
./doc/html/linx_sender.3.html \
./doc/html/linx_send_w_opt.3.html \
./doc/html/linx_send_w_s.3.html \
./doc/html/linx_set_sigsize.3.html \
./doc/html/linx_sigattr.3.html \
./doc/html/linx_sigsize.3.html \
./doc/html/linxstat.1.html \
./doc/html/linx_types.h.3.html \
./doc/html/mkcmclcon.1.html \
./doc/html/mkethcon.1.html \
./doc/html/mklink.1.html \
./doc/html/mkriocon.1.html \
./doc/html/mkshmcon.1.html \
./doc/html/mktcpcon.1.html \
./doc/html/rmcmclcon.1.html \
./doc/html/rmethcon.1.html \
./doc/html/rmlink.1.html \
./doc/html/rmriocon.1.html \
./doc/html/rmshmcon.1.html \
./doc/html/rmtcpcon.1.html \
./doc/index.html \
./doc/linxmanpages.pdf \
./doc/linxprotocols/book-linx-protocols-html/abstract.html \
./doc/linxprotocols/book-linx-protocols-html/cmcl.html \
./doc/linxprotocols/book-linx-protocols-html/cmcl-proto-desr.html \
./doc/linxprotocols/book-linx-protocols-html/cm__connestablish.html \
./doc/linxprotocols/book-linx-protocols-html/cm_protocols.html \
./doc/linxprotocols/book-linx-protocols-html/cm_proto-reliablemsg.html \
./doc/linxprotocols/book-linx-protocols-html/cm_proto-supervision.html \
./doc/linxprotocols/book-linx-protocols-html/defines_acronyms.html \
./doc/linxprotocols/book-linx-protocols-html/dochistory.html \
./doc/linxprotocols/book-linx-protocols-html/eth_cm_manager.html \
./doc/linxprotocols/book-linx-protocols-html/eth_cm-proto-desr.html \
./doc/linxprotocols/book-linx-protocols-html/gtw-protocol.html \
./doc/linxprotocols/book-linx-protocols-html/gtw-proto-descr.html \
./doc/linxprotocols/book-linx-protocols-html/html.css \
./doc/linxprotocols/book-linx-protocols-html/images/empty.png \
./doc/linxprotocols/book-linx-protocols-html/images/enea_logo.png \
./doc/linxprotocols/book-linx-protocols-html/images/linx-presentation.png \
./doc/linxprotocols/book-linx-protocols-html/images/linxprotocols-connect.png \
./doc/linxprotocols/book-linx-protocols-html/images/linxprotocols-connect-states.png \
./doc/linxprotocols/book-linx-protocols-html/images/linxprotocols-connect-supervise-peer-down.png \
./doc/linxprotocols/book-linx-protocols-html/images/linxprotocols-connect-supervise-peer-replies.png \
./doc/linxprotocols/book-linx-protocols-html/images/linxprotocols-connect-supervise.png \
./doc/linxprotocols/book-linx-protocols-html/images/linxprotocols-disconnect-states.png \
./doc/linxprotocols/book-linx-protocols-html/images/linxprotocols-ptp-connect.png \
./doc/linxprotocols/book-linx-protocols-html/images/linxprotocols-ptp-connectstates.png \
./doc/linxprotocols/book-linx-protocols-html/index.html \
./doc/linxprotocols/book-linx-protocols-html/introduction.html \
./doc/linxprotocols/book-linx-protocols-html/linx-cre-init.html \
./doc/linxprotocols/book-linx-protocols-html/linxdisc-daemon.html \
./doc/linxprotocols/book-linx-protocols-html/linx_featurenegotiation.html \
./doc/linxprotocols/book-linx-protocols-html/linx-name-lookup.html \
./doc/linxprotocols/book-linx-protocols-html/linx-protocols.html \
./doc/linxprotocols/book-linx-protocols-html/linx-proto-index.html \
./doc/linxprotocols/book-linx-protocols-html/linx-proto-msgs.html \
./doc/linxprotocols/book-linx-protocols-html/linx-publish.html \
./doc/linxprotocols/book-linx-protocols-html/linx-supervision.html \
./doc/linxprotocols/book-linx-protocols-html/overview.html \
./doc/linxprotocols/book-linx-protocols-html/ptp_cm_manager.html \
./doc/linxprotocols/book-linx-protocols-html/ptp_cm-proto-descr.html \
./doc/linxprotocols/book-linx-protocols-html/rio_cm_manager.html \
./doc/linxprotocols/book-linx-protocols-html/rio_cm-proto-desr.html \
./doc/linxprotocols/book-linx-protocols-html/shm_cm.html \
./doc/linxprotocols/book-linx-protocols-html/shm_cm-proto-descr.html \
./doc/linxprotocols/book-linx-protocols-html/tcp_cm_manager.html \
./doc/linxprotocols/book-linx-protocols-html/tcpcm-proto-descr.html \
./doc/linxprotocols/book-linx-protocols-html/title.html \
./doc/linxprotocols/book-linx-protocols-html/title.html-toc.html \
./doc/usersguide/images/linxgw-overview.png \
./doc/usersguide/images/linxgw-overview.svg \
./doc/UsersGuide_LINX_for_Linux.pdf \
./doc/UsersGuide_LINX_Gateway.pdf \
./doc/usersguide/UsersGuide_LINX_for_Linux.html \
./doc/usersguide/UsersGuide_LINX_Gateway.html \
./README \
./RELEASE_NOTES \
./scripts/make_distribution \
./scripts/make_linx_doc
endif
